--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             </a>
             <i class="miniMenu d-block d-md-none d-flex  justify-content-between flex-row flex-wrap">
                 <a href="#about" title="من أنا" class="myLink minix active"><i class="fas fa-info-circle"></i></a>
-                <a href="#experience" title="الخبرات" class="myLink minix"><i class="fas fa-code"></i> </a>
+                <a href="#experience" title="المهارات ولغات البرمجة" class="myLink minix"><i class="fas fa-code"></i>
+                </a>
                 <a href="#education" title="التعليم" class="myLink minix"><i class="fas fa-graduation-cap"></i></a>
-                <a href="#skills" title="المهارات" class="myLink minix"><i class="fas fa-cogs"></i> </a>
+                <a href="#skills" title="الخبرات العملية" class="myLink minix"><i class="fas fa-cogs"></i> </a>
                 <a href="#interests" title="الاهتمامات" class="myLink minix"><i class="fab fa-gratipay"></i> </a>
                 <a href="#awards" title="الشهادات" class="myLink minix"><i class="fas fa-award"></i> </a>
             </i>
@@ -50,14 +51,14 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link myLink js-scroll-trigger" href="#experience">
-                        <i class="fas fa-code"></i> الخبرات</a>
+                        <i class="fas fa-code"></i> المهارات ولغات البرمجة</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link myLink js-scroll-trigger" href="#education">
                         <i class="fas fa-graduation-cap"></i> التعليم</a>
                 </li>
                 <li class="nav-item"><a class="nav-link myLink js-scroll-trigger" href="#skills">
-                        <i class="fas fa-cogs"></i> المهارات</a>
+                        <i class="fas fa-cogs"></i> الخبرات العملية</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link myLink js-scroll-trigger" href="#interests">
@@ -86,7 +87,9 @@
                 </h1>
 
                 <p class="lead mb-4">
-                <div class="lead mb-3"><strong>التخصص الأساسي: </strong> مطور (اي اس بي دوت نت) - ASP.NET Developer.
+                <div class="lead mb-3"><strong>التخصص الأساسي: </strong> مطور (اي اس بي دوت نت) <br> ASP.NET Developer
+                    <span class="text-primary">(MVC / Core / API)
+                    </span>
                 </div>
                 <div class="lead mb-3"><strong>تاريخ الميلاد: </strong> 1402هـ / 1982 م .</div>
                 <div class="lead mb-3"><strong>الجنسية :</strong> سوداني</div>
@@ -123,124 +126,7 @@
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
-                <h2 class="mb-5">الخبرات</h2>
-                <div class="mycards d-flex  justify-content-center flex-row flex-wrap">
-
-                    <div class="card">
-                        <h3 class="card-header">ASP.Net Framework</h3>
-                        <div class="card-body">
-                            <div class="subheading">MVC / Core / API </div>
-                        </div>
-                        <div class="card-footer">
-                            <span class="text-primary">80%</span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="card-header">ASP.Net Framework</h3>
-                        <div class="card-body">
-                            <div class="subheading">MVC / Core / API </div>
-                        </div>
-                        <div class="card-footer">
-                            <span class="text-primary">80%</span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="card-header">DotNet Devoloper</h3>
-                        <div class="card-body">
-                            <div class="subheading">Web App / WinForms </div>
-                        </div>
-                        <div class="card-footer">
-                            <span class="text-primary">80%</span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="card-header">ASP.Net Framework</h3>
-                        <div class="card-body">
-                            <div class="subheading">MVC / Core / API </div>
-                        </div>
-                        <div class="card-footer">
-                            <span class="text-primary">80%</span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="card-header">ASP.Net Framework</h3>
-                        <div class="card-body">
-                            <div class="subheading">MVC / Core / API </div>
-                        </div>
-                        <div class="card-footer">
-                            <span class="text-primary">80%</span>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3 class="card-header">DotNet Devoloper</h3>
-                        <div class="card-body">
-                            <div class="subheading">Web App / WinForms </div>
-                        </div>
-                        <div class="card-footer">
-                            <span class="text-primary">80%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-        <hr class="m-0" />
-        <!-- Education-->
-        <section class="resume-section" id="education">
-            <div class="resume-section-content">
-                <h2 class="mb-5">التعليم</h2>
-                <div class="mycards d-flex  justify-content-center flex-row flex-wrap">
-
-                    <div class="card">
-                        <h3 class="card-header">جامعة الجزيرة - بالسودان</h3>
-                        <div class="card-body">
-                            <div class="subheading">دبلوم وسيط</div>
-                            <div>كلية العلوم الرياضية والحاسوب</div>
-
-                        </div>
-                        <div class="card-footer">
-                            <p>الدرجة : الأولى</p>
-                            <span class="text-primary">2005م - 1425هـ</span>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <h3 class="card-header">المركز الأهلي لتعليم الآلة الكاتبه - بجازان</h3>
-                        <div class="card-body">
-                            <div class="subheading">دبلوم</div>
-                            <div>ادخال البيانات ومعالجة النصوص</div>
-
-                        </div>
-                        <div class="card-footer">
-                            <p>التقدير : جيد جداً</p>
-                            <div class="flex-shrink-0"><span class="text-primary">1999م - 1420هـ </span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <h3 class="card-header">مركز سودانت</h3>
-                        <div class="card-body">
-                            <div class="subheading">دبلوم</div>
-                            <div>صيانة وشبكات</div>
-
-                        </div>
-                        <div class="card-footer">
-                            <p>التقدير : جيد جداً</p>
-                            <span class="text-primary">2000م - 1421هـ </span>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </section>
-        <hr class="m-0" />
-        <!-- Skills-->
-        <section class="resume-section" id="skills">
-            <div class="resume-section-content">
-                <h2 class="mb-5">المهارات(لغات البرمجة والتقنيات)</h2>
+                <h2 class="mb-5">المهارات (لغات البرمجة والتقنيات)</h2>
                 <div class="myImgs">
                     <div class="card card-color">
                         <img src="./img/tech/html.png" class="myImgs-img" alt="....">
@@ -379,6 +265,235 @@
 
                 </div>
 
+
+            </div>
+
+        </section>
+        <hr class="m-0" />
+        <!-- Education-->
+        <section class="resume-section" id="education">
+            <div class="resume-section-content">
+                <h2 class="mb-5">التعليم</h2>
+                <div class="mycards d-flex  justify-content-center flex-row flex-wrap">
+
+                    <div class="card">
+                        <h3 class="card-header">جامعة الجزيرة - بالسودان</h3>
+                        <div class="card-body">
+                            <div class="subheading">دبلوم وسيط</div>
+                            <div>كلية العلوم الرياضية والحاسوب</div>
+
+                        </div>
+                        <div class="card-footer">
+                            <p>الدرجة : الأولى</p>
+                            <span class="text-primary">2005م - 1425هـ</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">المركز الأهلي لتعليم الآلة الكاتبه - بجازان</h3>
+                        <div class="card-body">
+                            <div class="subheading">دبلوم</div>
+                            <div>ادخال البيانات ومعالجة النصوص</div>
+
+                        </div>
+                        <div class="card-footer">
+                            <p>التقدير : جيد جداً</p>
+                            <div class="flex-shrink-0"><span class="text-primary">1999م - 1420هـ </span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">مركز سودانت</h3>
+                        <div class="card-body">
+                            <div class="subheading">دبلوم</div>
+                            <div>صيانة وشبكات</div>
+
+                        </div>
+                        <div class="card-footer">
+                            <p>التقدير : جيد جداً</p>
+                            <span class="text-primary">2000م - 1421هـ </span>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+        <hr class="m-0" />
+        <!-- Skills-->
+        <section class="resume-section" id="skills">
+            <div class="resume-section-content">
+                <h2 class="mb-5"> الخبرات العملية</h2>
+                <div class="mycards d-flex  justify-content-center flex-row flex-wrap">
+
+                    <div class="card">
+                        <h3 class="card-header">مؤسسة محمد صالح المنتشري</h3>
+                        <strong class="text-center">(السعودية - مكة المكرمة)</strong>
+                        <div class="card-body">
+                            <strong>نوع النظام: </strong><span class="subheading">موقع إدارة الأملاك والعقارات</span>
+                            <br><strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET MVC</span>
+                        </div>
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong><span class="text-primary">2019 إلى الآن</span>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <h3 class="card-header">مستشفى الأمير سلطان بالمدينة النبوية</h3>
+                        <strong class="text-center">(السعودية - المدينة)</strong>
+                        <div class="card-body">
+                            <strong>نوع النظام: </strong><span class="subheading">موقع تعريفي بالمستشفى/إدارة
+                                الزيارات/إدارة التوظيف</span>
+                            <br><strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET (مشارك في التطوير/دعم
+                                فني)</span>
+                        </div>
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong>
+                            <span class="text-primary">2020-2021 عن بعد</span>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="card">
+                        <h3 class="card-header">مؤسسة الخيار الصائب</h3>
+                        <strong class="text-center">(السعودية - مكة المكرمة)</strong>
+                        <div class="card-body">
+                            <strong>نوع النظام: </strong><span class="subheading">موقع إدارة ومتابعة مصروفات المقاولات
+                                وسلفيات العمال</span>
+                            <br><strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET MVC</span>
+                        </div>
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong>
+                            <span class="text-primary">2017-2019</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">مؤسسة تيم التجارة</h3>
+                        <strong class="text-center">(السعودية - جدة)</strong>
+                        <div class="card-body">
+                            <strong>نوع النظام: </strong><span class="subheading">برنامج محاسبي متكامل</span>
+                            <br><strong>نوع التقنية: </strong><span class="subheading">c# WinForms</span>
+                        </div>
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong>
+                            <span class="text-primary">2016</span>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <h3 class="card-header">شركة بترونيدز للخدمات البترولية</h3>
+                        <strong class="text-center">(السودان - الخرطوم)</strong>
+                        <div class="card-body">
+                            <strong>نوع النظام: </strong><span class="subheading">برنامج مبيعات ومخان وتقسيط</span>
+                            <br><strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
+                        </div>
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong>
+                            <span class="text-primary">2010-2016 دوام جزئي</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">شركة الشرائع الدولية</h3>
+                        <strong class="text-center">(السودان - الخرطوم)</strong>
+                        <div class="card-body">
+                            <strong>نوع النظام: </strong><span class="subheading">برنامج مبيعات ومخازن</span>
+                            <br><strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
+                        </div>
+                        <div class="card-footer">
+                            <strong>فترة العمل معهم: </strong>
+                            <span class="text-primary">2003-2016</span>
+                        </div>
+                    </div>
+
+                    <hr class="m-0" />
+
+
+                </div>
+
+
+                <hr class="m-5" />
+                <h3 class="mb-5 text-center text-decoration-underline"> مشاريع اخرى منفذه</h3>
+                <div class="mycards other-proj d-flex  justify-content-center flex-row flex-wrap">
+
+
+                    <div class="card">
+                        <h3 class="card-header">برامج محاسبة مصغرة</h3>
+                        <strong class="text-center proj-info">(محاسبة/شؤون افراد/مبيعات/مخزن)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">(مصنع الرضا للصابون / شركة العبكر
+                                للتجميل / شركة جولدن روز للتجميل / شركة مياس للتجميل / دكتور النعمان /)</span>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">API لبرنامج توصيل طلبات</h3>
+                        <strong class="text-center proj-info">(إدارة مالية/خدمات توصيل/مبيعات/مخزن/ربط بين
+                            التطبيقات)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET Core</span>
+                            <br><strong>المنفذ لهم: </strong><span class="subheading">(هجا سوفت - pharmacyAPI / مرسال
+                                السوداني(لم يكتمل))</span>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">متابعة المصاعد</h3>
+                        <strong class="text-center proj-info">(إدارة مالية/عقود صيانة/إدارة أعطال/صيانة دورية)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET</span>
+                            <br><strong>المنفذ لهم: </strong>
+                            <span class="subheading">اعمال شخصية</span>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <h3 class="card-header">فحص كورونا المستجد</h3>
+                        <strong class="text-center proj-info">(إدارة مالية / تسلسل اخذ العينات إلى اخراج
+                            النتيجة)</strong>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <strong>نوع التقنية: </strong><span class="subheading">C# ASP.NET Core</span>
+                            <br><strong>المنفذ لهم: </strong>
+                            <span class="subheading">اعمال شخصية</span>
+                        </div>
+
+                    </div>
+
+<div class="card">
+    <h3 class="card-header">إدارة العيادات والصيدليات</h3>
+    <strong class="text-center proj-info">(إدارة مالية /عيادات / معامل /صيدلية)</strong>
+    <hr class="m-0">
+    <div class="card-body">
+        <strong>نوع التقنية: </strong><span class="subheading">VB 6.0</span>
+        <br><strong>المنفذ لهم: </strong>
+        <span class="subheading">مركز بر الوالدين/دكتور مبارك الفاضل</span>
+    </div>
+
+</div>
+
+
+
+                </div>
+
+                <hr class="m-0" />
+
+
+                <!-- </div> -->
             </div>
         </section>
         <hr class="m-0" />
